--- a/linksfree/style.css
+++ b/linksfree/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #333333;
+    font-family: 'Poppins', sans-serif;
   }
   
   h1{
@@ -46,4 +47,19 @@ body {
 }
 .user{
   height: 40px;
+}
+
+.fa-brands{
+  margin-right: 10px;
+}
+
+a{
+  transition: transform 10s ease;
+}
+
+a:hover{
+  transform: scale(1.05);
+  transform: rotate(360deg);
+  
+ 
 }
